--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=enchere_user
 spring.datasource.password=Pa$$w0rd
 # PostGreSQL JDBC driver not precised?
 
-# spring.sql.init.mode=always
-# spring.sql.init.schema-locations=classpath:scripts/schema.sql
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:scripts/schema.sql
 # spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
