--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.password=Pa$$w0rd
 
 spring.sql.init.mode=always
 spring.sql.init.schema-locations=classpath:scripts/schema.sql
-# spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
+spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
