feat (Users): session expires in 5 mins

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
 logging.level.root=INFO
 logging.level.fr.eni.projetEnchere=DEBUG
 
+# expiration de la session au bout de 5 mintues
+server.servlet.session.timeout=600s
