--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.postgresql:postgresql:42.6.0'
 	
 	
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
