feat (Article Image): auto run folder setup, load images into article details
java script that autoruns at spring startup, creates a new folder structure just outside of the project, takes the test images in static and puts them in the right place, then serves the images from the external folder to the HTML view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
 logging.level.root=INFO
 logging.level.fr.eni.projetEnchere=DEBUG
 
+
+# Define the base directory for storing images
+image.directory=${user.dir}/../fake_projetEnchere_server/images
+
+# Serve images from a directory outside the JAR (relative to user.dir)
+spring.web.resources.static-locations=file:${user.dir}/../fake_projetEnchere_server/
