style(articleDetails) : css wip

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.sql.init.data-locations=classpath:scripts/insertTestSet.sql
 
 logging.level.root=INFO
 logging.level.fr.eni.projetEnchere=DEBUG
+logging.level.fr.eni.projetEnchere.dal.article=INFO
+logging.level.fr.eni.projetEnchere.dal.category=INFO
 
 # expiration de la session au bout de 5 mintues
 server.servlet.session.timeout=600s
