--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,6 @@ server.servlet.session.timeout=600s
 # Define the base directory for storing images
 image.directory=${user.dir}/../fake_projetEnchere_server/images
 # Serve images from a directory outside the JAR (relative to user.dir)
-# spring.web.resources.static-locations=file:${user.dir}/../fake_projetEnchere_server/
+spring.web.resources.static-locations=file:${user.dir}/../fake_projetEnchere_server/,classpath:static/
 
 
